--- a/.github/workflows/night.yml
+++ b/.github/workflows/night.yml
@@ -1,23 +1,29 @@
-name: Daily Weather
+name: Save Night Weather
 
 on:
   schedule:
-    - cron: '0 11 * * *'  # 12:00 Poland time in UTC
+    # 00:01 Poland time (CET/CEST) → 23:01 UTC
+    - cron: '1 23 * * *'
   workflow_dispatch:
 
 jobs:
-  run:
+  night_weather:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: true  # allows using GITHUB_TOKEN to push
+
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+
       - run: pip install requests
-      - run: python weather_bot.py
+
+      - run: python night_weather.py
         env:
-          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
-          CHAT_ID: ${{ secrets.CHAT_ID }}
           OWM_API_KEY: ${{ secrets.OWM_API_KEY }}
           LAT: ${{ secrets.LAT }}
           LON: ${{ secrets.LON }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
